--- a/experiments/Conv-AE_experiment_local_data.ipynb
+++ b/experiments/Conv-AE_experiment_local_data.ipynb
@@ -845,6 +845,34 @@
   },
   {
    "cell_type": "code",
+   "execution_count": 2,
+   "id": "5fac8e9b",
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "0.1764705882352941\n",
+      "0.11538461538461539\n",
+      "0.375\n"
+     ]
+    }
+   ],
+   "source": [
+    "TP = 52 - 46\n",
+    "FPS = 10\n",
+    "FPN = 46\n",
+    "precision = TP/(TP+FPS)\n",
+    "recall = TP/(TP+FPN)\n",
+    "F1 = 2*precision*recall/(precision+recall)\n",
+    "print(F1)\n",
+    "print(recall)\n",
+    "print(precision)"
+   ]
+  },
+  {
+   "cell_type": "code",
    "execution_count": 27,
    "id": "45771fcb",
    "metadata": {},
@@ -903,7 +931,7 @@
    "name": "python",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
-   "version": "3.9.7"
+   "version": "3.9.13"
   }
  },
  "nbformat": 4,
