Experiments with SST and new Kalman Filter model. Workflow notebooks and new dataset.

--- a/experiments/1-D_Kalman_filter_experiment_local_data.ipynb
+++ b/experiments/1-D_Kalman_filter_experiment_local_data.ipynb
@@ -469,10 +469,22 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 60,
+   "execution_count": 1,
    "id": "64889307",
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "ename": "NameError",
+     "evalue": "name 'gaussian' is not defined",
+     "output_type": "error",
+     "traceback": [
+      "\u001b[0;31m---------------------------------------------------------------------------\u001b[0m",
+      "\u001b[0;31mNameError\u001b[0m                                 Traceback (most recent call last)",
+      "Cell \u001b[0;32mIn[1], line 21\u001b[0m\n\u001b[1;32m     18\u001b[0m         list_measured_pos\u001b[38;5;241m.\u001b[39mappend(gaussian(mean_ts, var_ts))\n\u001b[1;32m     19\u001b[0m     \u001b[38;5;28;01mreturn\u001b[39;00m list_measured_pos\n\u001b[0;32m---> 21\u001b[0m \u001b[38;5;28;01mdef\u001b[39;00m \u001b[38;5;21mmake_one_step_prediction\u001b[39m(list_measured_pos, g\u001b[38;5;241m=\u001b[39m\u001b[43mgaussian\u001b[49m(\u001b[38;5;241m100\u001b[39m, \u001b[38;5;241m.1800\u001b[39m\u001b[38;5;241m*\u001b[39m\u001b[38;5;241m*\u001b[39m\u001b[38;5;241m2\u001b[39m), window\u001b[38;5;241m=\u001b[39m\u001b[38;5;241m10\u001b[39m):\n\u001b[1;32m     22\u001b[0m     list_prediction, predictions_x \u001b[38;5;241m=\u001b[39m [], []\n\u001b[1;32m     23\u001b[0m     \u001b[38;5;28;01mfor\u001b[39;00m i \u001b[38;5;129;01min\u001b[39;00m \u001b[38;5;28mrange\u001b[39m(\u001b[38;5;241m1\u001b[39m,\u001b[38;5;28mlen\u001b[39m(list_measured_pos)):\n",
+      "\u001b[0;31mNameError\u001b[0m: name 'gaussian' is not defined"
+     ]
+    }
+   ],
    "source": [
     "def gaussian_multiply(g1, g2):\n",
     "    mean = (g1.var * g2.mean + g2.var * g1.mean) / (g1.var + g2.var)\n",
@@ -1134,165 +1146,6 @@
    "source": [
     "nab = evaluating(df_0['true_change_points'], df_0['predicted_cp'], metric='nab', numenta_time='30 sec')"
    ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 107,
-   "id": "1777b3ca",
-   "metadata": {},
-   "outputs": [
-    {
-     "data": {
-      "text/plain": [
-       "65"
-      ]
-     },
-     "execution_count": 107,
-     "metadata": {},
-     "output_type": "execute_result"
-    }
-   ],
-   "source": [
-    "ord('A')"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 110,
-   "id": "12833c5f",
-   "metadata": {},
-   "outputs": [
-    {
-     "name": "stdout",
-     "output_type": "stream",
-     "text": [
-      "A\n",
-      "B\n",
-      "C\n",
-      "D\n",
-      "E\n",
-      "F\n",
-      "G\n",
-      "H\n",
-      "I\n",
-      "J\n",
-      "K\n",
-      "L\n",
-      "M\n",
-      "N\n",
-      "O\n",
-      "P\n",
-      "Q\n",
-      "R\n",
-      "S\n",
-      "T\n",
-      "U\n",
-      "V\n",
-      "W\n",
-      "X\n",
-      "Y\n",
-      "Z\n"
-     ]
-    }
-   ],
-   "source": [
-    "for i in range(65,91):\n",
-    "    print(chr(i))"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 111,
-   "id": "15af81ca",
-   "metadata": {},
-   "outputs": [
-    {
-     "data": {
-      "text/plain": [
-       "97"
-      ]
-     },
-     "execution_count": 111,
-     "metadata": {},
-     "output_type": "execute_result"
-    }
-   ],
-   "source": [
-    "ord('a')"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 112,
-   "id": "fb07bf93",
-   "metadata": {},
-   "outputs": [
-    {
-     "data": {
-      "text/plain": [
-       "122"
-      ]
-     },
-     "execution_count": 112,
-     "metadata": {},
-     "output_type": "execute_result"
-    }
-   ],
-   "source": [
-    "ord('z')"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 113,
-   "id": "50324f8f",
-   "metadata": {},
-   "outputs": [
-    {
-     "name": "stdout",
-     "output_type": "stream",
-     "text": [
-      "a\n",
-      "b\n",
-      "c\n",
-      "d\n",
-      "e\n",
-      "f\n",
-      "g\n",
-      "h\n",
-      "i\n",
-      "j\n",
-      "k\n",
-      "l\n",
-      "m\n",
-      "n\n",
-      "o\n",
-      "p\n",
-      "q\n",
-      "r\n",
-      "s\n",
-      "t\n",
-      "u\n",
-      "v\n",
-      "w\n",
-      "x\n",
-      "y\n",
-      "z\n"
-     ]
-    }
-   ],
-   "source": [
-    "for i in range(97, 123):\n",
-    "    print(chr(i))"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "id": "b40d1e94",
-   "metadata": {},
-   "outputs": [],
-   "source": []
   }
  ],
  "metadata": {
@@ -1311,7 +1164,7 @@
    "name": "python",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
-   "version": "3.9.13"
+   "version": "3.10.6"
   }
  },
  "nbformat": 4,
