add experiment for syth sinusoid

--- a/experiments/refactoring_experiments/CloudData.ipynb
+++ b/experiments/refactoring_experiments/CloudData.ipynb
@@ -585,8 +585,39 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 2,
+   "execution_count": 4,
    "id": "efc9d076-ba06-4e05-af1d-428c28835644",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "transformed_aa684g = CloudDataTransformer(DrillingData(\"xxxAA684G\").get(), \"xxxAA684G\").transform()"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 5,
+   "id": "51e57555-e418-4718-bad1-2fc658e97708",
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "array([nan,  2.,  5.,  3.,  6.])"
+      ]
+     },
+     "execution_count": 5,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "transformed_aa684g.LITHOLOGY.unique()"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 6,
+   "id": "f43dcfeb-7e77-41f5-a454-e93044daf0f7",
    "metadata": {},
    "outputs": [
     {
@@ -611,11 +642,17 @@
        "    <tr style=\"text-align: right;\">\n",
        "      <th></th>\n",
        "      <th>GR</th>\n",
-       "      <th>unitless</th>\n",
+       "      <th>Resist_short</th>\n",
+       "      <th>Resist_long</th>\n",
+       "      <th>DrillingSpeed</th>\n",
+       "      <th>LITHOLOGY</th>\n",
        "      <th>CPs</th>\n",
        "    </tr>\n",
        "    <tr>\n",
        "      <th>time</th>\n",
+       "      <th></th>\n",
+       "      <th></th>\n",
+       "      <th></th>\n",
        "      <th></th>\n",
        "      <th></th>\n",
        "      <th></th>\n",
@@ -624,106 +661,153 @@
        "  <tbody>\n",
        "    <tr>\n",
        "      <th>1970-01-01 00:00:00</th>\n",
-       "      <td>88.625</td>\n",
-       "      <td>2.0</td>\n",
-       "      <td>0</td>\n",
+       "      <td>NaN</td>\n",
+       "      <td>NaN</td>\n",
+       "      <td>NaN</td>\n",
+       "      <td>NaN</td>\n",
+       "      <td>NaN</td>\n",
+       "      <td>1</td>\n",
        "    </tr>\n",
        "    <tr>\n",
        "      <th>1970-01-01 00:00:01</th>\n",
-       "      <td>107.250</td>\n",
-       "      <td>2.0</td>\n",
-       "      <td>0</td>\n",
+       "      <td>NaN</td>\n",
+       "      <td>NaN</td>\n",
+       "      <td>NaN</td>\n",
+       "      <td>NaN</td>\n",
+       "      <td>NaN</td>\n",
+       "      <td>1</td>\n",
        "    </tr>\n",
        "    <tr>\n",
        "      <th>1970-01-01 00:00:02</th>\n",
-       "      <td>108.420</td>\n",
-       "      <td>2.0</td>\n",
-       "      <td>0</td>\n",
+       "      <td>NaN</td>\n",
+       "      <td>NaN</td>\n",
+       "      <td>NaN</td>\n",
+       "      <td>NaN</td>\n",
+       "      <td>NaN</td>\n",
+       "      <td>1</td>\n",
        "    </tr>\n",
        "    <tr>\n",
        "      <th>1970-01-01 00:00:03</th>\n",
-       "      <td>109.590</td>\n",
-       "      <td>2.0</td>\n",
-       "      <td>0</td>\n",
+       "      <td>NaN</td>\n",
+       "      <td>NaN</td>\n",
+       "      <td>NaN</td>\n",
+       "      <td>NaN</td>\n",
+       "      <td>NaN</td>\n",
+       "      <td>1</td>\n",
        "    </tr>\n",
        "    <tr>\n",
        "      <th>1970-01-01 00:00:04</th>\n",
-       "      <td>110.990</td>\n",
-       "      <td>2.0</td>\n",
-       "      <td>0</td>\n",
+       "      <td>NaN</td>\n",
+       "      <td>NaN</td>\n",
+       "      <td>NaN</td>\n",
+       "      <td>NaN</td>\n",
+       "      <td>NaN</td>\n",
+       "      <td>1</td>\n",
        "    </tr>\n",
        "    <tr>\n",
        "      <th>...</th>\n",
        "      <td>...</td>\n",
        "      <td>...</td>\n",
        "      <td>...</td>\n",
+       "      <td>...</td>\n",
+       "      <td>...</td>\n",
+       "      <td>...</td>\n",
        "    </tr>\n",
        "    <tr>\n",
-       "      <th>1970-01-01 02:57:39</th>\n",
-       "      <td>124.950</td>\n",
-       "      <td>2.0</td>\n",
-       "      <td>0</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <th>1970-01-01 02:57:40</th>\n",
+       "      <th>1970-01-01 03:05:40</th>\n",
        "      <td>125.715</td>\n",
+       "      <td>9.683760</td>\n",
+       "      <td>0.126452</td>\n",
+       "      <td>53.630</td>\n",
        "      <td>2.0</td>\n",
        "      <td>0</td>\n",
        "    </tr>\n",
        "    <tr>\n",
-       "      <th>1970-01-01 02:57:41</th>\n",
+       "      <th>1970-01-01 03:05:41</th>\n",
        "      <td>126.480</td>\n",
+       "      <td>9.530000</td>\n",
+       "      <td>0.126452</td>\n",
+       "      <td>73.350</td>\n",
        "      <td>2.0</td>\n",
        "      <td>0</td>\n",
        "    </tr>\n",
        "    <tr>\n",
-       "      <th>1970-01-01 02:57:42</th>\n",
+       "      <th>1970-01-01 03:05:42</th>\n",
        "      <td>122.645</td>\n",
+       "      <td>9.474839</td>\n",
+       "      <td>0.126452</td>\n",
+       "      <td>55.030</td>\n",
        "      <td>2.0</td>\n",
        "      <td>0</td>\n",
        "    </tr>\n",
        "    <tr>\n",
-       "      <th>1970-01-01 02:57:43</th>\n",
+       "      <th>1970-01-01 03:05:43</th>\n",
        "      <td>118.810</td>\n",
+       "      <td>9.419999</td>\n",
+       "      <td>0.126452</td>\n",
+       "      <td>36.710</td>\n",
        "      <td>2.0</td>\n",
+       "      <td>1</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>1970-01-01 03:05:44</th>\n",
+       "      <td>122.200</td>\n",
+       "      <td>9.404988</td>\n",
+       "      <td>0.126452</td>\n",
+       "      <td>45.625</td>\n",
+       "      <td>NaN</td>\n",
        "      <td>0</td>\n",
        "    </tr>\n",
        "  </tbody>\n",
        "</table>\n",
-       "<p>10664 rows × 3 columns</p>\n",
+       "<p>11145 rows × 6 columns</p>\n",
        "</div>"
       ],
       "text/plain": [
-       "                          GR  unitless  CPs\n",
-       "time                                       \n",
-       "1970-01-01 00:00:00   88.625       2.0    0\n",
-       "1970-01-01 00:00:01  107.250       2.0    0\n",
-       "1970-01-01 00:00:02  108.420       2.0    0\n",
-       "1970-01-01 00:00:03  109.590       2.0    0\n",
-       "1970-01-01 00:00:04  110.990       2.0    0\n",
-       "...                      ...       ...  ...\n",
-       "1970-01-01 02:57:39  124.950       2.0    0\n",
-       "1970-01-01 02:57:40  125.715       2.0    0\n",
-       "1970-01-01 02:57:41  126.480       2.0    0\n",
-       "1970-01-01 02:57:42  122.645       2.0    0\n",
-       "1970-01-01 02:57:43  118.810       2.0    0\n",
+       "                          GR  Resist_short  Resist_long  DrillingSpeed  \\\n",
+       "time                                                                     \n",
+       "1970-01-01 00:00:00      NaN           NaN          NaN            NaN   \n",
+       "1970-01-01 00:00:01      NaN           NaN          NaN            NaN   \n",
+       "1970-01-01 00:00:02      NaN           NaN          NaN            NaN   \n",
+       "1970-01-01 00:00:03      NaN           NaN          NaN            NaN   \n",
+       "1970-01-01 00:00:04      NaN           NaN          NaN            NaN   \n",
+       "...                      ...           ...          ...            ...   \n",
+       "1970-01-01 03:05:40  125.715      9.683760     0.126452         53.630   \n",
+       "1970-01-01 03:05:41  126.480      9.530000     0.126452         73.350   \n",
+       "1970-01-01 03:05:42  122.645      9.474839     0.126452         55.030   \n",
+       "1970-01-01 03:05:43  118.810      9.419999     0.126452         36.710   \n",
+       "1970-01-01 03:05:44  122.200      9.404988     0.126452         45.625   \n",
        "\n",
-       "[10664 rows x 3 columns]"
+       "                     LITHOLOGY  CPs  \n",
+       "time                                 \n",
+       "1970-01-01 00:00:00        NaN    1  \n",
+       "1970-01-01 00:00:01        NaN    1  \n",
+       "1970-01-01 00:00:02        NaN    1  \n",
+       "1970-01-01 00:00:03        NaN    1  \n",
+       "1970-01-01 00:00:04        NaN    1  \n",
+       "...                        ...  ...  \n",
+       "1970-01-01 03:05:40        2.0    0  \n",
+       "1970-01-01 03:05:41        2.0    0  \n",
+       "1970-01-01 03:05:42        2.0    0  \n",
+       "1970-01-01 03:05:43        2.0    1  \n",
+       "1970-01-01 03:05:44        NaN    0  \n",
+       "\n",
+       "[11145 rows x 6 columns]"
       ]
      },
-     "execution_count": 2,
+     "execution_count": 6,
      "metadata": {},
      "output_type": "execute_result"
     }
    ],
    "source": [
-    "CloudDataTransformer(DrillingData(\"xxxAA684G\").get(), \"xxxAA684G\").transform()"
+    "transformed_aa684g"
    ]
   },
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "51e57555-e418-4718-bad1-2fc658e97708",
+   "id": "61f8a5dd-d60c-45eb-a388-3882bcd288d0",
    "metadata": {},
    "outputs": [],
    "source": []
